# static-env-var

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  fnox.toml
src/: lib.rs
