[package]
name = "static-env-var"
version = "0.1.1"
edition = "2024"
rust-version = "1.85.0"
description = "A macro for loading the env vars statically in a `LazyLock`."
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/DenisGorbachev/static-env-var"
repository = "https://github.com/DenisGorbachev/static-env-var"
readme = "README.md"
keywords = []
categories = []
exclude = [
    ".*",
    "*.local.*",
    "doc/dev",
    "specs",
    "README.ts",
    "AGENTS*.md",
    "CLAUDE*.md",
    "deno.json",
    "commitlint.config.mjs",
    "lefthook.yml",
    "mise.toml",
    "rumdl.toml",
    "rustfmt.toml",
    ".yolobox"
]

[package.metadata.details]
title = "static-env-var"
tagline = ""
summary = ""
announcement = ""
readme = { generate = true }

[dependencies]
